--- a/code/plan/CMakeLists.txt
+++ b/code/plan/CMakeLists.txt
@@ -1,6 +1,13 @@
 cmake_minimum_required(VERSION 3.12)
-project(plan)
+set(PROJECT_NAME planner)
+
+project(${PROJECT_NAME})
 
 set(CMAKE_CXX_STANDARD 14)
+set(Boost_USE_STATIC_LIBS   ON)
+set(Protobuf_USE_STATIC_LIBS ON)
 
-add_executable(plan main.cpp)
+find_package(Boost REQUIRED COMPONENTS program_options filesystem)
+
+add_executable(${PROJECT_NAME} main.cpp parser.cpp parser.h structures.h)
+target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
